--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Silent Gift AI App</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Hello, Silent Gift AI!</h1>
   <p>這是你的第一個 GitHub Pages 頁面 🎉</p>
+
+  <script src="main.js"></script>
 </body>
 </html>
