--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Silent Gift AI App</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Silent Gift 默语AI</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, Silent Gift AI!</h1>
-  <p>這是你的第一個 GitHub Pages 頁面 🎉</p>
-
+  <div class="container">
+    <h1>Silent Gift · 默语AI</h1>
+    <div class="chatbox" id="chatbox">
+      <p class="bot">👋 欢迎来到默语AI，我在这里倾听你。</p>
+    </div>
+    <div class="input-area">
+      <input type="text" id="userInput" placeholder="写下你想说的话...">
+      <button onclick="sendMessage()">发送</button>
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
