--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Silent Gift 默语AI</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body
+  <div class="logo">Silent Gift · 默语AI</div>
   <div class="container">
     <h1>Silent Gift · 默语AI</h1>
     <div class="chatbox" id="chatbox">
