--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
       <input type="text" id="userInput" placeholder="写下你想说的话...">
       <button onclick="sendMessage()">发送</button>
     </div>
-  </div>
-  <script src="main.js"></script>
+<!-- chat 区域结束 -->
+</div>
+
+<!-- 背景音乐 -->
+<audio id="bgm" autoplay loop>
+  <source src="你的音频地址.mp3" type="audio/mpeg">
+</audio>
+
+<!-- 脚本引入 -->
+<script src="main.js"></script>
 </body>
 </html>
